--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
 baseurl = "https://zen-kalam-4ce959.netlify.com"
-title = "johndoe"
+title = "シモキタコイン"
 
 theme = "hugo-coder-master"
 
-languagecode = "en"
+languagecode = "ja"
 
 paginate = 20
 canonifyurls = true
@@ -13,29 +13,29 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 [params]
-    author = "John Doe"
-    description = "John Doe's personal website"
-    keywords = "blog,developer,personal"
-    info = "Full Stack DevOps and Magician"
+    author = "シモキタコイン"
+    description = "株式会社シモキタコイン"
+    keywords = ""
+    info = ""
 
-[[params.social]]
-    name = "Github"
-    weight = 1
-    url = "https://github.com/johndoe/"
-[[params.social]]
-    name = "Twitter"
-    weight = 2
-    url = "https://twitter.com/johndoe/"
-[[params.social]]
-    name = "LinkedIn"
-    weight = 3
-    url = "https://www.linkedin.com/in/johndoe/"
+# [[params.social]]
+#     name = "Github"
+#     weight = 1
+#     url = "https://github.com/johndoe/"
+# [[params.social]]
+#     name = "Twitter"
+#     weight = 2
+#     url = "https://twitter.com/johndoe/"
+# [[params.social]]
+#     name = "LinkedIn"
+#     weight = 3
+#     url = "https://www.linkedin.com/in/johndoe/"
 
-[[menu.main]]
-    name = "Blog"
-    weight = 1
-    url  = "/posts/"
-[[menu.main]]
-    name = "About"
-    weight = 2
-    url = "/about/"
+# [[menu.main]]
+#     name = "Blog"
+#     weight = 1
+#     url  = "/posts/"
+# [[menu.main]]
+#     name = "About"
+#     weight = 2
+#     url = "/about/"
