--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://zen-kalam-4ce959.netlify.com"
-title = "シモキタコイン"
+title = "test"
 
 theme = "hugo-coder-master"
 
@@ -13,8 +13,8 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 [params]
-    author = "シモキタコイン"
-    description = "株式会社シモキタコイン"
+    author = ""
+    description = ""
     keywords = ""
     info = ""
 
