--- a/config.toml
+++ b/config.toml
@@ -28,70 +28,70 @@ googleAnalytics = ""
 
 
 	# Navigation
-	[params.navigation]
-		brand = "Hugo Creative Theme"
+# 	[params.navigation]
+# 		brand = "Hugo Creative Theme"
 
-		[params.navigation.links]
-			about     = "About"
-			services  = "Services"
-			portfolio = "Portfolio"
-			contact   = "Contact"
+# 		[params.navigation.links]
+# 			about     = "About"
+# 			services  = "Services"
+# 			portfolio = "Portfolio"
+# 			contact   = "Contact"
 
 
 	# Hero section
-	[params.hero]
+# 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		slogan     = "Your awesome slogan"
-		subtitle   = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis nesciunt consequatur ut nihil voluptatem fugiat eos eveniet alias in veniam?"
-		buttonText = "Find out more"
+# 		slogan     = "Your awesome slogan"
+# 		subtitle   = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis nesciunt consequatur ut nihil voluptatem fugiat eos eveniet alias in veniam?"
+# 		buttonText = "Find out more"
 
 
 	# About section
-	[params.about]
-		headline    = "We've got what you need!"
-		description = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique eos eligendi error veritatis harum, sed aliquid totam, quam minus neque enim est architecto, ad. Maiores, aliquid, vitae!"
-		buttonText  = "Get started!"
+# 	[params.about]
+# 		headline    = "We've got what you need!"
+# 		description = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique eos eligendi error veritatis harum, sed aliquid totam, quam minus neque enim est architecto, ad. Maiores, aliquid, vitae!"
+# 		buttonText  = "Get started!"
 
 
-	# Service section
-	[params.services]
-		headline = "At your service"
+# 	# Service section
+# 	[params.services]
+# 		headline = "At your service"
 
-        [[params.services.list]]
-            icon = "fa-diamond"
-            title = "Sturdy Templates"
-            description = "Our templates are updated regularly so they don't break."
+#         [[params.services.list]]
+#             icon = "fa-diamond"
+#             title = "Sturdy Templates"
+#             description = "Our templates are updated regularly so they don't break."
 
-        [[params.services.list]]
-			icon = "fa-paper-plane"
-			title = "Ready to Ship"
-			description = "You can use this theme as is, or you can make changes!"
+#         [[params.services.list]]
+# 			icon = "fa-paper-plane"
+# 			title = "Ready to Ship"
+# 			description = "You can use this theme as is, or you can make changes!"
 
-		[[params.services.list]]
-            icon = "fa-newspaper-o"
-            title = "Up to Date"
-            description = "We update dependencies to keep things fresh."
+# 		[[params.services.list]]
+#             icon = "fa-newspaper-o"
+#             title = "Up to Date"
+#             description = "We update dependencies to keep things fresh."
 
-        [[params.services.list]]
-            icon = "fa-heart"
-            title = "Made with Love"
-            description = "You have to make your websites with love these days!"
+#         [[params.services.list]]
+#             icon = "fa-heart"
+#             title = "Made with Love"
+#             description = "You have to make your websites with love these days!"
 
 
     # Portfolio modals
-	[params.portfolio.modal]
-        client = "Client"
-        date = "Date"
-        category = "Category"
-        buttonText = "Close"
+# 	[params.portfolio.modal]
+#         client = "Client"
+#         date = "Date"
+#         category = "Category"
+#         buttonText = "Close"
 
     # Aside section
-	[params.aside]
-		headline = "Get the Creative Theme for Hugo"
+# 	[params.aside]
+# 		headline = "Get the Creative Theme for Hugo"
 
-		[params.aside.button]
-			text = "Download now"
-			link = "//github.com/digitalcraftsman/hugo-creative-theme"
+# 		[params.aside.button]
+# 			text = "Download now"
+# 			link = "//github.com/digitalcraftsman/hugo-creative-theme"
 
 	# Contact section
 	[params.contact]
