--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://zen-kalam-4ce959.netlify.com/"
+baseurl = "https://shimokitacoin-test.netlify.com/"
 languageCode = "ja"
 title = "test site"
 theme = "theme"
